--- a/lists/Chaos/emperorschildren.log.html
+++ b/lists/Chaos/emperorschildren.log.html
@@ -9,7 +9,7 @@
     Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost.
 </p>
 <p>
-    Characters: Emperor's Children characters now have different equipment oriented towards First Strike, and all have the Daemonic Focus special rule. This makes it cheaper to use daemons as semi-permanent additions to formations.
+    Characters: No more Sorcerer Lord, but the Lord and Warlord characters now have different equipment oriented towards First Strike, and all have the Daemonic Focus special rule. This makes it cheaper to use daemons as semi-permanent additions to formations.
 </p>
 <p>
     Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
@@ -25,6 +25,7 @@
 <ul>
     <li>The Debaser, a faction specific Defiler, is introduced, based on the E-UK stats.</li>
     <li>The Questor and Subjugators have slightly different weaponry, bringing them more in line with the fluff, and have had their speed reduced by 5cm in line with other Warhound type units. The Subjugators are now in parity with the Questors in both capability and cost.</li>
-    <li>Dreadnought Assault Packs are now a part of the Elite section, to give the list more unique choices.</li>
+    <li>Emperor's Children Dreadnoughts have slightly different weapons, making it more unique.</li>
     <li>Emperor's Children Predators are now a very common upgrade to formations in the list.</li>
+    <li>Emperor's Children Terminators can trade one Sirenshriek Terminator for three Land Raiders at discounted cost.</li>
 </ul>
