--- a/content/rules.html
+++ b/content/rules.html
@@ -49,6 +49,14 @@
     there is enough physical space to fit.
 </p>
 
+<h6>When is a formation 'in a position to support'?</h6>
+<p>
+    After an Engage has been resolved, formations on the losing side recieves a Blast Marker, but it is not entirely clear exactly at which
+    point during the Engage that this is determined. Our suggestion is that formations with units that has rolled FF dice (or could have been allowed
+    to roll FF dice had they not been broken), are considered to have been in a position to support. This removes a situation in which units from the enemy
+    were within 15cm from a formation at the start of the Engage, but were eliminated before the supporting formation had a chance to act.
+</p>
+
 <h6>Preserve allocation order between normal and macro hits</h6>
 <p>
     Macro and standard hits are resolved in separate phases of shooting and assaults. We suggest you preserve the
@@ -69,6 +77,14 @@
     before moving on to ordinary weapons. Hits from ordinary weapons should be allocated front-to-back, as usual. This
     means that units that were hit by the BP weapon and survived can be allocated a second hit from standard
     shooting.
+</p>
+
+<h6>Barrage template placement and range</h6>
+<p>
+    In the rules it is left unclear whether it is enough for a all units in a formation that is using a BP type weapons to
+    place a Barrage template on a unit that is within range, or if the actual Barrage template has to be in range. Since the former
+    interpretation could lead to strange effects when firing at a very big unit, our suggestion is that an actual Barrage template has to be
+    within range, as well as the unit it is firing at.
 </p>
 
 <h6>Maximize the effect of special rules when shooting</h6>
@@ -174,6 +190,11 @@
     see units that are further away from the edge of the terrain piece than they are. Same rule as for popped up
     skimmers also apply for units on hills. Aircrafts can always see over all terrain. In addition, see the 'Terrain'
     section on this website.
+</p>
+<h6>Skimmers, terrain and movement</h6>
+<p>
+    Skimmers only checks for dangerous and difficult terrain at the start and at the end of their total movement, unless otherwise specificed.
+    Skimmers that ignores intervening terrain can obviously not claim cover from such terrain, and counts as being popped up for Overwatch purposes.
 </p>
 
 <!--
