Chaos logs updated

--- a/lists/Chaos/alphalegion.log.html
+++ b/lists/Chaos/alphalegion.log.html
@@ -12,13 +12,13 @@
 </p>
 <p>
     Anti-Air: With no really good 30k Anti-Air unit to pick from, the AA aspect of the list is instead performed by the
-    Imperial Guard Hydra. This also fits the list well because the Hydra is of course the Alpha Legion symbol.
+    Imperial Guard Hydra. This happens to fit the Alpha Legion theme as well, since the Hydra is the Alpha Legion's symbol.
 </p>
 <p>
     Alpha Legion Transports: To reinforce the theme that the Alpha Legion is very close to loyalist Space Marines (and
     to compensate for the relative lack of daemons and heavy CSM formations) the Alpha Legion has the equivalent to the
     Space Marine Transports rule, has access to Air Assault transport, and has Drop Pods instead of Dreadclaws. This
-    makes the Alpha Legion Terminators perhaps the most flexible in the game, since they can choose between deploying in
+    makes the Alpha Legion Terminators some of the most flexible in the game, since they can choose between deploying in
     Drop Pods or Teleporting.
 </p>
 <p>
