--- a/lists/Chaos/chaos_race.log.html
+++ b/lists/Chaos/chaos_race.log.html
@@ -15,10 +15,10 @@
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
     <li>Icon Bearer grants Augment Summoning +1 in addition to its other stats.</li>
-    <li>Daemon Prince always has Supreme Commander and Wings, while gaining Daemonic Focus and Invulnerable Save.</li>
+    <li>Daemon Prince always has Supreme Commander and Jump Pack, while gaining Daemonic Focus and Invulnerable Save.</li>
     <li>The Chaos Champion has slightly different stats, removing the difference between factions.</li>
-    <li>Land Raiders are cheaper to take as a formation transport upgrade, in line with Transport upgrades throughout the game.</li>
+    <li>Land Raiders are cheaper to take as a formation transport upgrade, in line with Transport upgrades being generally cheaper throughout all lists.</li>
     <li>Hell Blades have a 6+ AA instead of 5+, but are 25 points cheaper.</li>
     <li>The Despoiler Class Battleship has had its Slow and Steady rule replaced with 'Slow to Arrive' (can be plotted from turn 2
-        onwards instead of turn 3 onwards) and is also significantly cheaper.</li>
+        onwards instead of turn 3 onwards). It is also significantly cheaper and has slightly different armament.</li>
 </ul>
