--- a/lists/Chaos/deathguard.log.html
+++ b/lists/Chaos/deathguard.log.html
@@ -3,14 +3,13 @@
     The EA:Ragnarök Death Guard has taken some inspiration from the E-UK version of the list, as well as the Emperor's Children Net-EA list. Instead of the Invulnerable Save and lack of access to the 'March' action, the list trades improved armour for slower speed on some of its units.
 </p>
 <p>
-    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost.
+    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
 </p>
 <p>
     Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
-    <li>Death Guard Terminators formation slightly cheaper due to the list's lack of Dreadclaws.</li>
     <li>Death Guards trades the normal CSM fliers and space ships for Heldrakes, Harbringer Bombers and the Plagueship.</li>
     <li>Plague Zombies are fixed size, but slightly worse stats.</li>
     <li>Plague Tower oriented more towards being a transport option, with higher speed and worse save.</li>
