--- a/lists/Chaos/emperorschildren.log.html
+++ b/lists/Chaos/emperorschildren.log.html
@@ -6,7 +6,7 @@
     Compulsory Cult Marines: In the NetEA version of the Emperor's Children, it was perfectly possible to play without any Noise Marines whatsoever, while the E-UK version enforces a great deal of Noise Marines, making the list quite expensive. The EA:Ragnarök versions of the CSM Cult armies tries to land in between these extremes with the core retinues being roughtly split between Fearless and non-Fearless units.
 </p>
 <p>
-    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost.
+    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
 </p>
 <p>
     Characters: No more Sorcerer Lord, but the Lord and Warlord characters now have different equipment oriented towards First Strike, and all have the Daemonic Focus special rule. This makes it cheaper to use daemons as semi-permanent additions to formations.
