--- a/lists/Chaos/ironwarriors.log.html
+++ b/lists/Chaos/ironwarriors.log.html
@@ -6,7 +6,7 @@
     Bionics and Battlefield Repairs: The same special rules as the loyalist Iron Hands have been introduced to the list, making certain units and formations a bit tougher.
 </p>
 <p>
-    Obliterators: Iron Warriors has special access to Obliterators. While they cannot be taken as a separate unit, several formations in the army have access to them, in particular the Iron Warriors Retinue and the Tyrant Terminators.
+    Obliterators: Iron Warriors has special access to Obliterators. While they cannot be taken as a separate formation, several formations in the army have access to them, in particular the Iron Warriors Retinue and the Tyrant Terminators.
 </p>
 <p>
     Ordinatus: The Ordinatus Majoris has tweaked stats and is significantly cheaper, as it is severly overpriced in other lists given how fragile the unit is. The list also receives the Ordinatus Minoris in chaos format. The Siegelord and Ravager Titans has been removed from the list due to these inclusions.
