--- a/lists/Chaos/thousandsons.log.html
+++ b/lists/Chaos/thousandsons.log.html
@@ -9,6 +9,9 @@
     Scarab Occult Terminators, Daemon Princes and Warp Rifts: Like other 'Cult' CSM lists, the Tzeentch-flavoured variety is also fearless, and trades their shooting and CC stats for very competent FF stats. While Thousand Sons do not have access to Dreadclaws, they do have the 'Warp Rift' special rule, giving them an unique way of entering the battlefield.
 </p>
 <p>
+    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
+</p>
+<p>
     Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <p>
