--- a/lists/Chaos/worldeaters.log.html
+++ b/lists/Chaos/worldeaters.log.html
@@ -10,6 +10,9 @@
     formations while making them more vulnerable to losing Engages and giving retinues some shooting.
 </p>
 <p>
+    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
+</p>
+<p>
     Juggernauts and Bloodcrushers: In order to make a greater difference between Juggernauts and Bikes, and to enable
     the introduction of Bloodcrushers, Juggernaut riders now have better armour, better speed but no infiltrate, these
     formations must now get closer to the enemy than before. Bloodcrushers gives the list access to exceptionally hard
