--- a/content/rules.html
+++ b/content/rules.html
@@ -53,7 +53,7 @@
 <p>
     After an Engage has been resolved, formations on the losing side recieves a Blast Marker, but it is not entirely clear exactly at which
     point during the Engage that this is determined. Our suggestion is that formations with units that has rolled FF dice (or could have been allowed
-    to roll FF dice had they not been broken), are considered to have been in a position to support. This removes a situation in which units from the enemy
+    to roll FF dice had they not been broken), are considered to have been in a position to support. This resolves the situation in which units from the enemy
     were within 15cm from a formation at the start of the Engage, but were eliminated before the supporting formation had a chance to act.
 </p>
 
@@ -81,7 +81,7 @@
 
 <h6>Barrage template placement and range</h6>
 <p>
-    In the rules it is left unclear whether it is enough for a all units in a formation that is using a BP type weapons to
+    In the rules it is left unclear whether it is enough for all units in a formation that is using BP type weapons to
     place a Barrage template on a unit that is within range, or if the actual Barrage template has to be in range. Since the former
     interpretation could lead to strange effects when firing at a very big unit, our suggestion is that an actual Barrage template has to be
     within range, as well as the unit it is firing at.
@@ -193,8 +193,8 @@
 </p>
 <h6>Skimmers, terrain and movement</h6>
 <p>
-    Skimmers only checks for dangerous and difficult terrain at the start and at the end of their total movement, unless otherwise specificed.
-    Skimmers that ignores intervening terrain can obviously not claim cover from such terrain, and counts as being popped up for Overwatch purposes.
+    Skimmers only checks for dangerous and difficult terrain at the start and at the end of their total movement, unless otherwise stated by the player.
+    Skimmers that ignore intervening terrain can obviously not claim cover from such terrain, and counts as being popped up for Overwatch purposes.
 </p>
 
 <!--
