--- a/content/rules.html
+++ b/content/rules.html
@@ -81,10 +81,7 @@
 
 <h6>Barrage template placement and range</h6>
 <p>
-    In the rules it is left unclear whether it is enough for all units in a formation that is using BP type weapons to
-    place a Barrage template on a unit that is within range, or if the actual Barrage template has to be in range. Since the former
-    interpretation could lead to strange effects when firing at a very big unit, our suggestion is that an actual Barrage template has to be
-    within range, as well as the unit it is firing at.
+    When using BP type weapons there is an issue how to place the barrage template at extreme ranges, which is unresolved in the rules. Either the barrage template only has to be place on a unit within range, or the entire template has to be within range. Since the former interpretation could lead to strange effects when firing at a very big unit such as a War Engine, our suggestion is that an actual Barrage template has to be within range, as well as the unit it is firing at.
 </p>
 
 <h6>Maximize the effect of special rules when shooting</h6>
