--- a/lists/DE/kabaloftheblackheart.log.html
+++ b/lists/DE/kabaloftheblackheart.log.html
@@ -6,6 +6,9 @@
     The 'Fleet of Foot' special army rule now also grants Dark Eldar formations a +1 bonus when attempting a March action, to further encourage the use of this unique aspect of the army.
 </p>
 <p>
+    Certain units now have the 'Wind-Swift' special rule, which removed the penalty for shooting when doing a Double, but the unit no longer gains +1 when doing Sustain Fire.
+</p>
+<p>
     The Syndicate core formation is more expensive, and has a compulsory Dracon character. This is because it felt a bit too obvious in the list, at the expense of the list's Partisan formations, which have generally been made slightly better over all.
 </p>
 <p>
@@ -26,4 +29,5 @@
     <li>The Portable Webway Portal is bought as an upgrade to a character in the army, not as a separate choice.</li>
     <li>The Archon character now has the Fearless special rule.</li>
     <li>The Voidraven has slightly different stats.</li>
+    <li>Ravagers have 5+ FF.</li>
 </ul>
