About page as default, inserted Youtube links

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <title>EA:Ragnarök</title>
-    <meta http-equiv="refresh" content="0; url=site.html?content=armies"/>
+    <meta http-equiv="refresh" content="0; url=site.html?content=intro"/>
 </head>
 <body>
-<p><a href="site.html?content=armies">Redirect</a></p>
+<p><a href="site.html?content=intro">Redirect</a></p>
 </body>
 </html>
