chaos and scenario

--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -33,7 +33,7 @@
     same turn that it lands.
 </p>
 
-<p>The "Break Their Spirit" VC is worth 2 points once. The Blitz objective is worth 2 points each turn. All other
+<p>The "Break Their Spirit" VC is worth 2 points once. All other
     objectives are worth 1 point each turn.
     These points accumulate from the first turn onwards.</p>
 
