--- a/lists/Chaos/chaos_race.log.html
+++ b/lists/Chaos/chaos_race.log.html
@@ -1,9 +1,9 @@
 <h3>General Chaos Space Marine changes</h3>
 
 <p>
-    Factions and Daemons: The balance between the lesser daemons in the Undivided Chaos Space Marine lists have been a bit off, with Flamers and Daemonic Beasts in particular being very powerful choices. There's also been the issue of consistency, where Tzeentch doesn't have access to Horrors. So a decision was made to slightly nerf the daemons by reducing the armour save of Daemonic Beasts to 5+, reducing their engagement range by removing Infiltrators and giving them a move of 30cm instead. Horrors replace Flamers in Undivided lists.
+    Factions and Daemons: The balance between the lesser daemons in the Undivided Chaos Space Marine lists have been a bit off, with Flamers and Daemonic Beasts in particular being very powerful choices. There's also been the issue of consistency, where Tzeentch doesn't have access to Horrors. So a decision was made to slightly nerf the daemons by reducing the armour save of Daemonic Beasts to 5+, reducing their engagement range by removing Infiltrators and giving them a move of 30cm instead. Plaguebearers lose their FF, but are given 3+ CC. Horrors replace Flamers in Undivided lists.
 
-    In addition, lesser daemons were felt to be in general a bit too obvious, so have been increased in cost to 20 for most Chaos Space Marine lists.
+    In addition, lesser daemons in general were felt to be a bit too obvious, so have been increased in cost to 20 for most Chaos Space Marine lists.
 
     Greater Daemons are essentially unchanged, but has received an Invulnerable Save (along with all units in the game that can be considered daemonic) and are no longer Expendable. This is primarily oriented towards a future Daemonic Incursion list where pure Daemonic formations are possible, but also has an impact here. The Bloodthirster now also has an FF value.
 </p>
