Moved main pade to index.html, and fixed naming

--- a/content/online.html
+++ b/content/online.html
@@ -8,7 +8,7 @@
     There are two main options for playing Epic Armageddon online, Tabletop Simulator (which is 3d) and Vassal (which is
     2d). Each has their advantages, but the former was used in the development of Epic Armageddon Ragnarök, and benefits
     from the dedicated modules below that have been developed and are being maintained by the EA:Ragnarök team. That being
-    said, if someone wishes to create dedicated modules and instructions for playing Epic Armageddon Ragnarök on Vassal,
+    said, if someone wishes to create dedicated modules and instructions for playing EA:Ragnarök on Vassal,
     we would happily add them to this page.
 </p>
 
