--- a/content/scenarios.html
+++ b/content/scenarios.html
@@ -1,6 +1,6 @@
 <h2>Scenarios</h2>
 <p class="lead">
-    The EA:Ragnarök tournament game rules are designed to be used in conjunction with the EA:Ragnarök army lists.
+    The EA:Ragnarök tournament game rules are designed to be used with the EA:Ragnarök army lists.
     They will allow two players to fight an evenly balanced battle with little or no preparation.
 </p>
 
