--- a/content/intro.html
+++ b/content/intro.html
@@ -1,7 +1,7 @@
-<h2>Epic Armageddon: Ragnarök</h2>
+<h2>Epic Armageddon Ragnarök</h2>
 
 <p class="lead">
-    Welcome to Epic Armageddon: Ragnarök. On these pages you will find fan based lists and scenarios for Epic Armageddon
+    Welcome to Epic Armageddon Ragnarök. On these pages you will find fan based lists and scenarios for Epic Armageddon
     developed by the EA:Ragnarök team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group
     and the F-ERC group. We have done this project because we really enjoy the game, scenario and list development. We
     hope we have created a fresh new vibe on the game, and we aim for some fun gaming sessions.
@@ -29,7 +29,7 @@
 
 <h3>List Design</h3>
 <p>
-    We have done a few general changes across all Epic Armageddon: Ragnarök lists that we hope will improve the game,
+    We have done a few general changes across all Epic Armageddon Ragnarök lists that we hope will improve the game,
     and overall list design.
 </p>
 
