--- a/content/rules.html
+++ b/content/rules.html
@@ -57,6 +57,11 @@
     were within 15cm from a formation at the start of the Engage, but were eliminated before the supporting formation had a chance to act.
 </p>
 
+<h6>Resolving hits from Supporting attacks</h6>
+<p>
+    In order to determine the direction and order of hits from supporting fire, such hits are resolved one supporting formation at a time, in any order that the controlling player wishes.
+</p>
+
 <h6>Preserve allocation order between normal and macro hits</h6>
 <p>
     Macro and standard hits are resolved in separate phases of shooting and assaults. We suggest you preserve the
@@ -77,11 +82,6 @@
     before moving on to ordinary weapons. Hits from ordinary weapons should be allocated front-to-back, as usual. This
     means that units that were hit by the BP weapon and survived can be allocated a second hit from standard
     shooting.
-</p>
-
-<h6>Barrage template placement and range</h6>
-<p>
-    When using BP type weapons there is an issue how to place the barrage template at extreme ranges, which is unresolved in the rules. Either the barrage template only has to be place on a unit within range, or the entire template has to be within range. Since the former interpretation could lead to strange effects when firing at a very big unit such as a War Engine, our suggestion is that an actual Barrage template has to be within range, as well as the unit it is firing at.
 </p>
 
 <h6>Maximize the effect of special rules when shooting</h6>
@@ -148,8 +148,7 @@
 
 <h6>Orbital Bombardment extra templates</h6>
 <p>
-    Since Space Ships in EA:Ragnarök are cheaper and can arrive earlier,
-    extra templates from Orbital Bombardment must touch the first, plotted template, just as for normal BP type weapons.
+ Extra templates from Orbital Bombardment must touch the first, plotted template, just as for normal BP type weapons.
 </p>
 
 <h6>Always roll for critical hits</h6>
