Draft changelog for beta-2

--- a/lists/Chaos/deathguard.log.html
+++ b/lists/Chaos/deathguard.log.html
@@ -3,15 +3,31 @@
     The EA:Ragnarök Death Guard has taken some inspiration from the E-UK version of the list, as well as the Emperor's Children Net-EA list. Instead of the Invulnerable Save and lack of access to the 'March' action, the list trades improved armour for slower speed on some of its units.
 </p>
 <p>
-    Faction Specific Terminators: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
+    <b>Faction Specific Terminators</b>: Most CSM armies now have Terminators with special specific stats and weaponry, while those of The 'Cult' armies are also Fearless. This of course comes with a significant increase in cost. Like other 'Cult' armies, Terminators are now in the Core section instead of Elite, given their high cost.
 </p>
 <p>
-    Daemons: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
+    <b>Daemons</b>: All 'Cult' CSM armies now has a free Greater Daemon point, as well as having a compulsory Daemonic Pact upgrade. This both gives them more personality and tighter relationship with their respective patron god, but also creates some interesting tensions in army building (the Greater Daemon might be free, but the Chaos Champion certainly isn't...). This also compensates the Cult lists for the lost flexibility in daemons that Black Legion now has. What the Cult CSM lists do have is access to better version of the Daemonic Beast, as well as high-end lesser daemons which costs 2 summoning points to put on the battlefield, which opens up the potential for extremely powerful formations if summoning over a few turns.
 </p>
 <h5>Additional nerfs, boosts & tweaks</h5>
 <ul>
     <li>Death Guards trades the normal CSM fliers and space ships for Heldrakes, Harbringer Bombers and the Plagueship.</li>
     <li>Plague Zombies are fixed size, but slightly worse stats.</li>
     <li>Plague Tower oriented more towards being a transport option, with higher speed and worse save.</li>
-    <li>Nurgle Titans trades Void Shields for more DC, retains the same speed as others of their type. The Warlord equivalent has been removed, and is instead reserved for the Traitor Titan Legion list. The Plaguehound slightly increased in cost.</li>
+    <li>Nurgle Titans trades Void Shields for more DC, retains the same speed as others of their type. The Warlord equivalent has been removed, and is instead reserved for the Traitor Titan Legion list.</li>
 </ul>
+
+<h4>Version 1.0.beta-2</h4>
+<p>
+    After receiving feedback from the community we have reviewed the Death Guard list to further emphasize their combat doctrine and to correct some power imbalances in the list. We want the Death Guard to be a slow moving force of relentless infantry, backed up by powerful daemon engines using toxic weaponry to destroy their enemies. Some of that play style got lost in the first beta version, so we have done the following changes. The Retinue has received a price drop to 300 points. We have replaced the Chosen formation with Havocs in the elite section, to reduce the scouting abilities of the list. We also replaced the Land Raiders with a slower Death Guard variant and removed the Chaos Spartan Assault Tank.
+</p>
+<p>
+    <b>Daemon Engines</b>: All Nurgle daemon engines have replaced their <i>invulnerable save</i> with <i>regeneration</i> as we feel it fits the army theme and some of them needed a boost. We also wanted to give each of them a more defined role in the list, as they were all quite similar.
+<ul>
+    <li>The Plague Tower has been changed into a pure transport upgrade for the core formations. It is also slightly smaller but now cost only 175 points.</li>
+    <li>The Desecrators have been changed back closer to their UK original, with a Plague Cannon as a main gun but with nerfed anti-air stats.</li>
+    <li>The price of the Plague Reaper has been reduced to 200 points.</li>
+</ul>
+</p>
+<p>
+    There was a lot of debate regarding the Plague Zombies. In the first beta we nerfed them significantly compared to the Epic UK original, as we felt they could be used in very destructive ways. The main problem, and what makes them so hard to price, is the fact that they are fearless. In the beta-2 version we have renamed the unit Poxwalkers, removed the <i>fearless</i> special rule but made the formation much cheaper at 125 points.
+</p>
