Formatting of the chaos log

--- a/lists/Chaos/Chaos_race.log.html
+++ b/lists/Chaos/Chaos_race.log.html
@@ -1,17 +1,17 @@
 <h3>General Chaos Space Marine changes</h3>
 
 <p>
-    Factions and Daemons: The balance between the lesser daemons in the Undivided Chaos Space Marine lists have been a bit off, with Flamers and Daemonic Beasts in particular being very powerful choices. There's also been the issue of consistency, where Tzeentch doesn't have access to Horrors. So a decision was made to slightly nerf the daemons by reducing the armour save of Daemonic Beasts to 5+, reducing their engagement range by removing Infiltrators and giving them a move of 30cm instead. Plaguebearers lose their FF, but are given 3+ CC. Horrors replace Flamers in Undivided lists.
+    <b>Factions and Daemons</b>: The balance between the lesser daemons in the Undivided Chaos Space Marine lists have been a bit off, with Flamers and Daemonic Beasts in particular being very powerful choices. There's also been the issue of consistency, where Tzeentch doesn't have access to Horrors. So a decision was made to slightly nerf the daemons by reducing the armour save of Daemonic Beasts to 5+, reducing their engagement range by removing Infiltrators and giving them a move of 30cm instead. Plaguebearers lose their FF, but are given 3+ CC. Horrors replace Flamers in Undivided lists.
 
     In addition, lesser daemons in general were felt to be a bit too obvious, so have been increased in cost to 20 for most Chaos Space Marine lists.
 
     Greater Daemons are essentially unchanged, but has received an Invulnerable Save (along with all units in the game that can be considered daemonic) and are no longer Expendable. This is primarily oriented towards a future Daemonic Incursion list where pure Daemonic formations are possible, but also has an impact here. The Bloodthirster now also has an FF value.
 </p>
 <p>
-    Daemon Engines: In order to give these types of units a more defined personality, make their stats easier to remember, and add more variety between factions, all daemon engines now have 2+ Initiative Rating and Invulnerable Save. This has made it possible to make certain formations such as the Defilers slightly cheaper. They are also by definition part of a faction, and as such have a faction special rule which makes them more reliable in ways that fits with their theme.
+    <b>Daemon Engines</b>: In order to give these types of units a more defined personality, make their stats easier to remember, and add more variety between factions, all daemon engines now have 2+ Initiative Rating and Invulnerable Save. This has made it possible to make certain formations such as the Defilers slightly cheaper. They are also by definition part of a faction, and as such have a faction special rule which makes them more reliable in ways that fits with their theme.
 </p>
 <p>
-    Cult Marines: The Thousand Sons Marines have been replaced with the more accurate 'Rubric Marines' name, losing their 4+ Reinforced Armour in favor of a normal 3+ Armour and better FF. This change is primarily intended to balance the Thousand Sons list, but obviously also has an impact here.
+    <b>Cult Marines</b>: The Thousand Sons Marines have been replaced with the more accurate 'Rubric Marines' name, losing their 4+ Reinforced Armour in favor of a normal 3+ Armour and better FF. This change is primarily intended to balance the Thousand Sons list, but obviously also has an impact here.
 </p>
 
 <h5>Additional nerfs, boosts & tweaks</h5>
